solve issue: add z-index styling for drawer component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,7 @@
 .reset-tw * {
   all: revert !important;
 }
+
+.cl-drawerRoot {
+  z-index: 10;
+}
